--- a/BioBox/project.properties
+++ b/BioBox/project.properties
@@ -3,3 +3,4 @@ dependencies.Adafruit_GFX=0.0.0
 dependencies.Grove_Air_quality_Sensor=1.0.1
 dependencies.Adafruit_MQTT=1.6.1
 dependencies.JsonParserGeneratorRK=0.1.5
+dependencies.Adafruit_BME280=1.1.5
